--- a/app/templates/posts/index.hbs
+++ b/app/templates/posts/index.hbs
@@ -1,7 +1,7 @@
 <h1>Here are the posts:</h1>
 {{#each}}
   <div>
-    <h2>{{title}}</h2>
+    <h2>{{#link-to 'post' this}}{{title}}{{/link-to}}</h2>
     <p>{{body}}</p>
   </div>
 {{/each}}
